2010-05-24 Borut Razem <borut.razem AT siol.net>

	* src/SDCC.y, src/SDCCsymt.h: test if the parameter is a valid storage
	  class specifier

2010-05-23 Philipp Klaus Krause <pkk AT spth.de>
	* support/regression/tests/bug1875933.c:
	  Disabled recently introduced regression test on hc08, since it never workes there.

2010-05-23 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/peep.c,
	  src/z80/peeph-z80.def:
	  Minor peephole improvements.

2010-05-23 Borut Razem <borut.razem AT siol.net>

	* src/SDCCerr.c, src/SDCCerr.h, src/SDCCsymt.h, src/SDCC.y:
	  fixed bug #2811521: sdcc doesn't accept register storage class
	  specifier in func

2010-05-21 Philipp Klaus Krause <pkk AT spth.de>

	* src/mcs51/gen.c,
	  src/z80/gen.c,
	  src/hc08/gen.c,
	  src/ds390/gen.c,
	  support/regression/tests/bug1875933.c:
	  Completed fix for #1875933 applying #2892763.

2010-05-21 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCopt.c,
	  src/z80/gen.c,
	  support/regression/tests/memory.c:
	  Fixed bug #2995398.

2010-05-16 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/main.c:
	  A tiny step toward implementing #1921061.

2010-05-16 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/peeph-z80.def:
	  Minor peephole improvements.

2010-05-13 Borut Razem <borut.razem AT siol.net>

	* sdas/asxxsrc/asmain.c: fixed bug #2914707: as-z80 segmentation fault

2010-05-10 Borut Razem <borut.razem AT siol.net>

	* src/Makefile.in: added -Wall
	* sdas/linksrc/lkarea.c: fixed bug #2999446: ds390 xram limit at 0x400000
	* asxxsrc/asmain.c: fixed compiler warning

2010-05-10 Maarten Brock <sourceforge.brock AT dse.nl>

	* support/cpp/sdcpp.dsp: added sdcpp-diagnostic.c

2010-05-06 Maarten Brock <sourceforge.brock AT dse.nl>

	* device/lib/_strtok.c: cosmetic changes
	* sdas/linksrc/aslink.dsp: removed lkgb.c
	* src/SDCCast.c (gatherImplicitVariables): fixed bug 2956580, const iTemp
	* src/z80/peeph-gbz80.def (rule 16): fixed non-existent operandsNotSame bug